# swagger.yaml
@@ -3,7 +3,7 @@ info:
   title: Questify API
   version: "0.1"
 servers:
-  - url: https://questify-7qbb.onrender.com
+  - url: http://localhost:3000
 paths:
   /api/auth/signup:
     post:
@@ -28,7 +28,9 @@ paths:
               schema:
                 $ref: "#/components/schemas/SignUpSerializer"
               example:
+                username: string
                 email: string
+                message: Verification email sent
         400:
           description: Validation error
         409:
@@ -59,6 +61,8 @@ paths:
                 token: string
                 user:
                   email: string
+        400:
+          description: Validation error
         401:
           description: Authorization failed
         403:
@@ -73,9 +77,9 @@ paths:
         - Auth
       responses:
         200:
-          description: Logout success
+          description: Logout succeeded
         401:
-          description: Bearer auth failed
+          description: Authorization failed
 
   /api/auth/verify/{verificationToken}:
     get:
@@ -90,7 +94,7 @@ paths:
             type: string
       responses:
         200:
-          description: Successful verification
+          description: Verification succeeded
         404:
           description: User not found
 
@@ -141,7 +145,7 @@ paths:
                   username: string
                   email: string
         401:
-          description: Bearer auth failed
+          description: Authorization failed
 
   /api/cards/create:
     post:
@@ -157,9 +161,9 @@ paths:
             schema:
               $ref: "#/components/schemas/AddCard"
             example:
-              status: string,
-              text: string,
-              field: string,
+              status: string
+              text: string
+              field: string
               date: string
       responses:
         201:
@@ -169,9 +173,10 @@ paths:
               schema:
                 $ref: "#/components/schemas/AddCardSerializer"
               example:
-                status: string,
-                text: string,
-                field: string,
+                _id: string
+                status: string
+                text: string
+                field: string
                 date: string
                 owner:
                   _id: string
@@ -179,7 +184,7 @@ paths:
         400:
           description: Validation error
         401:
-          description: Bearer auth failed
+          description: Authorization failed
         409:
           description: Card already exists
 
@@ -203,9 +208,9 @@ paths:
             schema:
               $ref: "#/components/schemas/AddCard"
             example:
-              status: string,
-              text: string,
-              field: string,
+              status: string
+              text: string
+              field: string
               date: string
       responses:
         200:
@@ -217,9 +222,7 @@ paths:
         400:
           description: Validation error
         401:
-          description: Bearer auth failed
-        403:
-          description: User doesn't own card
+          description: Authorization failed
         404:
           description: Card not found
 
@@ -243,22 +246,20 @@ paths:
             application/json:
               schema:
                 properties:
-                  cardId:
+                  _id:
                     type: string
                   message:
                     type: string
                 required:
-                  - cardId
+                  - _id
                   - message
               example:
-                cardId: string
+                _id: string
                 message: Card deleted
         401:
-          description: Bearer auth failed
+          description: Authorization failed
         404:
           description: Card not found
-        403:
-          description: User doesn't own card
 
   /api/cards/{cardId}/completed:
     patch:
@@ -291,9 +292,7 @@ paths:
         400:
           description: Validation error
         401:
-          description: Bearer auth failed
-        403:
-          description: User doesn't own card
+          description: Authorization failed
         404:
           description: Card not found
 
@@ -317,10 +316,16 @@ components:
         - password
     SignUpSerializer:
       properties:
+        username:
+          type: string
         email:
           type: string
+        message:
+          type: string
       required:
+        - username
         - email
+        - message
     SignIn:
       properties:
         email:
@@ -410,6 +415,8 @@ components:
         - date
     AddCardSerializer:
       properties:
+        _id:
+          type: string
         status:
           type: string
           enum:
@@ -440,6 +447,7 @@ components:
             username:
               type: string
       required:
+        - _id
         - status
         - text
         - field
@@ -478,6 +486,10 @@ components:
           type: string
         email:
           type: string
+      required:
+        - _id
+        - username
+        - email
     UpdateCompleted:
       properties:
         completed:
